# openenv-word-guess-env

./: README.md  client.py  models.py  openenv.yaml  pyproject.toml  test.py
server/: Dockerfile  app.py  environment.py  requirements.txt
training/: README.md  requirements.txt  train.py
